@@ -12,18 +12,23 @@ import java.util.concurrent.ConcurrentHashMap;
 
 @Repository
 public class UserRepository {
-    private ConcurrentHashMap<String, ConcurrentHashMap<String, List<Authorities>>> users;
+    private ConcurrentHashMap<String, User> users;
 
     public UserRepository() {
         this.users = new ConcurrentHashMap<>();
-//        users.put("Vladimir", new ConcurrentHashMap<>());
-//        users.get("Vladimir").put("qwerty", Arrays.asList(Authorities.WRITE, Authorities.DELETE,Authorities.READ));
+        users.put("Vladimir", new User("Vladimir", "qwerty",
+                List.of(Authorities.READ,Authorities.DELETE,Authorities.WRITE)));
+        users.put("Irina", new User("Irina", "12345",
+                List.of(Authorities.READ,Authorities.WRITE)));
+        users.put("Oleg", new User("Oleg", "qwerty",
+                List.of(Authorities.READ)));
+
     }
 
     public List<Authorities> getUserAuthorities(String user, String password) {
 
-        if (users.containsKey(user) && users.get(user).containsKey(password)) {
-            return users.get(user).get(password);
+        if (users.containsKey(user) && users.get(user).getPassword().equals(password)) {
+            return users.get(user).getAuthorities();
 
         } else return Collections.emptyList();
 
